# gl3d

./: .gitignore  CMakeLists.txt  main.cpp
src/data/: VAO.cpp  VAO.h
src/data/buffer/: EBO.cpp  EBO.h  VBO.cpp  VBO.h
src/data/texture/: Texture.cpp  Texture.h
src/object/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/object/material/: Material.cpp  Material.h
src/shader/: Shader.cpp  Shader.h
src/shader/shaders/: default.frag  default.vert  light.frag
src/shader/shaders/light/lamp/: fs.glsl  vs.glsl
src/shader/shaders/mesh/col/: vs.glsl
src/shader/shaders/mesh/default/col/: fs.glsl  vs.glsl
src/shader/shaders/mesh/default/general/: vs.glsl
src/shader/shaders/mesh/default/tex/: fs.glsl  vs.glsl
src/shader/shaders/mesh/tex_spec/: fs.glsl
src/spatial/camera/: Camera.cpp  Camera.h
src/spatial/scene/: Scene.cpp  Scene.h
src/spatial/scene/node/: Node.cpp  Node.h
